# logP_predictor

./: Dockerfile  JR_1_data.py  JR_2_model.py  JR_3_website.py  LICENSE  README.md  predictor.pkl  pyproject.toml  requirements.txt  scaler_logP.pkl  scaler_nmx.pkl
all_predictions_0601/: learner.pkl  metadata.json
all_predictions_0601/models/: trainer.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L1/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L1/S1F1/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L1/S1F2/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L1/S1F3/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L1/S1F4/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L1/S1F5/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L1/S1F6/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L1/S1F7/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L1/S1F8/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L1/utils/: oof.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L2/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L2/S1F1/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L2/S1F2/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L2/S1F3/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L2/S1F4/: model.pkl
all_predictions_0601/models/NeuralNetTorch_BAG_L2/S1F5/: model.pkl
all_predictions_0601/models/WeightedEnsemble_L2/: model.pkl
all_predictions_0601/models/WeightedEnsemble_L3/: model.pkl
(+8 files in other folders)
