[project]
name = "logp-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogluon>=1.4.0",
    "pandas>=2.2.2",
    "psmiles",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.7.0",
    "streamlit>=1.36.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
]

[tool.uv.sources]
psmiles = { git = "https://github.com/kuennethgroup/psmiles" }
